<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_show"
        android:id="@+id/action_show"
        android:icon="@android:drawable/ic_menu_gallery"
        app:showAsAction="always"
        android:visible="true" />
    <item android:title="@string/menu_edit"
        android:id="@+id/action_edit"
        android:visible="true"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_save"
        android:visible="true" />
    <item android:title="@string/menu_replace"
        android:id="@+id/action_replace"
        android:visible="true"
        android:icon="@android:drawable/ic_menu_set_as" />
    <item android:title="@string/menu_editTags"
        android:id="@+id/action_editTags"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="always" />
    <item android:title="@string/menu_sac"
        android:id="@+id/action_sac"
        android:icon="@android:drawable/ic_menu_help" />
    <item android:title="@string/menu_load"
        android:id="@+id/action_load"
        android:icon="@android:drawable/sym_contact_card"
        android:visible="false"
        android:enabled="false" />
    <item android:title="@string/menu_file"
        android:id="@+id/action_file"
        android:icon="@android:drawable/ic_menu_save"
        android:visible="false"
        android:enabled="false" />
    <item
        android:id="@+id/action_clear"
        android:icon="@android:drawable/stat_sys_warning"
        android:title="@string/menu_clear"
        android:visible="false"
        android:enabled="false" />
</menu>